MTO - przygotować przedmiot #3
- working on program - edited Notes.yaml

--- a/TPMT/Notes.yaml
+++ b/TPMT/Notes.yaml
@@ -1,12 +1,18 @@
-
-- TPMT:
-  - Zadania:
-    - CLI, Backend, UT, TDD, GitHub
-    - mock, DI
-    - CI/CD Test Integration on DevOps
-    - Zastąpienie CLI przez HTTP (ASP NET), GUI test, Testy funkcyjne
-  - Wykład:
-    - "Applikacja Warstwowa"
-    - CI-CD on DevOps:
-      - Title: "Azure DevOps/Azure Pipelines  Ecosystems & integration  ASP.NET"
-      - URL: "https://docs.microsoft.com/en-us/azure/devops/pipelines/ecosystems/dotnet-core?view=azure-devops"
+--- 
+- 
+  Lab: 
+    - OPCInformationModel
+    - Simulator
+    - HMI
+    - kontener
+  TPMT: ~
+  Wykład: 
+    CI-CDonDevOps: 
+      URL: "https://docs.microsoft.com/en-us/azure/devops/pipelines/ecosystems/dotnet-core?view=azure-devops"
+      title: "Azure DevOps/Azure Pipelines  Ecosystems & integration  ASP.NET"
+    temat: "Applikacja Warstwowa"
+  Zadania: 
+    - "CLI, Backend, UT, TDD, GitHub"
+    - "mock, DI"
+    - "CI/CD Test Integration on DevOps"
+    - "Zastąpienie CLI przez HTTP (ASP NET), GUI test, Testy funkcyjne"
